@@ -1,3 +1,11 @@
+2007-04-30  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #4439]
+	* resolv/inet_ntop.c (inet_ntop4): Take terminating '\0' into
+	account in the size check.
+	* resolv/tst-inet_ntop.c: New test.
+	* resolv/Makefile (tests): Add tst-inet_ntop.
+
 2007-04-28  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #4102]
